# HDF5Plugins

./: CMakeLists.txt
.github/workflows/: linux.yml  mac.yml  windows.yml
NWB1Format/Source/: NWBRecording.cpp  OpenEphysLib.cpp
NWB2Format/Source/: NWBFormat.cpp  NWBFormat.h  NWBRecording.cpp
OpenEphysHDF5Lib/: CMakeLists.txt
