cmake_minimum_required(VERSION 3.5.0)
project(OE_HDF5)

add_subdirectory(OpenEphysHDF5Lib)
add_subdirectory(KWIKFormat)
add_subdirectory(NWB1Format)
add_subdirectory(NWB2Format)
add_dependencies(KWIKFormat OpenEphysHDF5Lib)
add_dependencies(NWB1Format OpenEphysHDF5Lib)
add_dependencies(NWB2Format OpenEphysHDF5Lib)
